adding notes on fixing formating issue with using read_cvs instead of read_txt

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e1a59d4e",
    "metadata": {},
    "outputs": [
@@ -423,216 +423,271 @@
          "type": "integer"
         },
         {
-         "name": "Country\tRegion",
+         "name": "Country",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Region",
          "rawType": "object",
          "type": "string"
         }
        ],
-       "ref": "66be4fec-193f-4863-9393-cfb88f85d8e4",
+       "ref": "abcc7d79-c5e8-4029-ad1b-caa5051091bb",
        "rows": [
         [
          "0",
-         "Afghanistan \tASIA (EX. NEAR EAST)         "
+         "Afghanistan ",
+         "ASIA (EX. NEAR EAST)         "
         ],
         [
          "1",
-         "Albania \tEASTERN EUROPE                     "
+         "Albania ",
+         "EASTERN EUROPE                     "
         ],
         [
          "2",
-         "Algeria \tNORTHERN AFRICA                    "
+         "Algeria ",
+         "NORTHERN AFRICA                    "
         ],
         [
          "3",
-         "American Samoa \tOCEANIA                            "
+         "American Samoa ",
+         "OCEANIA                            "
         ],
         [
          "4",
-         "Andorra \tWESTERN EUROPE                     "
+         "Andorra ",
+         "WESTERN EUROPE                     "
         ],
         [
          "5",
-         "Angola \tSUB-SAHARAN AFRICA                 "
+         "Angola ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "6",
-         "Anguilla \tLATIN AMER. & CARIB    "
+         "Anguilla ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "7",
-         "Antigua & Barbuda \tLATIN AMER. & CARIB    "
+         "Antigua & Barbuda ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "8",
-         "Argentina \tLATIN AMER. & CARIB    "
+         "Argentina ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "9",
-         "Armenia \tC.W. OF IND. STATES "
+         "Armenia ",
+         "C.W. OF IND. STATES "
         ],
         [
          "10",
-         "Aruba \tLATIN AMER. & CARIB    "
+         "Aruba ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "11",
-         "Australia \tOCEANIA                            "
+         "Australia ",
+         "OCEANIA                            "
         ],
         [
          "12",
-         "Austria \tWESTERN EUROPE                     "
+         "Austria ",
+         "WESTERN EUROPE                     "
         ],
         [
          "13",
-         "Azerbaijan \tC.W. OF IND. STATES "
+         "Azerbaijan ",
+         "C.W. OF IND. STATES "
         ],
         [
          "14",
-         "Bahamas, The \tLATIN AMER. & CARIB    "
+         "Bahamas, The ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "15",
-         "Bahrain \tNEAR EAST                          "
+         "Bahrain ",
+         "NEAR EAST                          "
         ],
         [
          "16",
-         "Bangladesh \tASIA (EX. NEAR EAST)         "
+         "Bangladesh ",
+         "ASIA (EX. NEAR EAST)         "
         ],
         [
          "17",
-         "Barbados \tLATIN AMER. & CARIB    "
+         "Barbados ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "18",
-         "Belarus \tC.W. OF IND. STATES "
+         "Belarus ",
+         "C.W. OF IND. STATES "
         ],
         [
          "19",
-         "Belgium \tWESTERN EUROPE                     "
+         "Belgium ",
+         "WESTERN EUROPE                     "
         ],
         [
          "20",
-         "Belize \tLATIN AMER. & CARIB    "
+         "Belize ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "21",
-         "Benin \tSUB-SAHARAN AFRICA                 "
+         "Benin ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "22",
-         "Bermuda \tNORTHERN AMERICA                   "
+         "Bermuda ",
+         "NORTHERN AMERICA                   "
         ],
         [
          "23",
-         "Bhutan \tASIA (EX. NEAR EAST)         "
+         "Bhutan ",
+         "ASIA (EX. NEAR EAST)         "
         ],
         [
          "24",
-         "Bolivia \tLATIN AMER. & CARIB    "
+         "Bolivia ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "25",
-         "Bosnia & Herzegovina \tEASTERN EUROPE                     "
+         "Bosnia & Herzegovina ",
+         "EASTERN EUROPE                     "
         ],
         [
          "26",
-         "Botswana \tSUB-SAHARAN AFRICA                 "
+         "Botswana ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "27",
-         "Brazil \tLATIN AMER. & CARIB    "
+         "Brazil ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "28",
-         "British Virgin Is. \tLATIN AMER. & CARIB    "
+         "British Virgin Is. ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "29",
-         "Brunei \tASIA (EX. NEAR EAST)         "
+         "Brunei ",
+         "ASIA (EX. NEAR EAST)         "
         ],
         [
          "30",
-         "Bulgaria \tEASTERN EUROPE                     "
+         "Bulgaria ",
+         "EASTERN EUROPE                     "
         ],
         [
          "31",
-         "Burkina Faso \tSUB-SAHARAN AFRICA                 "
+         "Burkina Faso ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "32",
-         "Burma \tASIA (EX. NEAR EAST)         "
+         "Burma ",
+         "ASIA (EX. NEAR EAST)         "
         ],
         [
          "33",
-         "Burundi \tSUB-SAHARAN AFRICA                 "
+         "Burundi ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "34",
-         "Cambodia \tASIA (EX. NEAR EAST)         "
+         "Cambodia ",
+         "ASIA (EX. NEAR EAST)         "
         ],
         [
          "35",
-         "Cameroon \tSUB-SAHARAN AFRICA                 "
+         "Cameroon ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "36",
-         "Canada \tNORTHERN AMERICA                   "
+         "Canada ",
+         "NORTHERN AMERICA                   "
         ],
         [
          "37",
-         "Cape Verde \tSUB-SAHARAN AFRICA                 "
+         "Cape Verde ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "38",
-         "Cayman Islands \tLATIN AMER. & CARIB    "
+         "Cayman Islands ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "39",
-         "Central African Rep. \tSUB-SAHARAN AFRICA                 "
+         "Central African Rep. ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "40",
-         "Chad \tSUB-SAHARAN AFRICA                 "
+         "Chad ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "41",
-         "Chile \tLATIN AMER. & CARIB    "
+         "Chile ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "42",
-         "China \tASIA (EX. NEAR EAST)         "
+         "China ",
+         "ASIA (EX. NEAR EAST)         "
         ],
         [
          "43",
-         "Colombia \tLATIN AMER. & CARIB    "
+         "Colombia ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "44",
-         "Comoros \tSUB-SAHARAN AFRICA                 "
+         "Comoros ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "45",
-         "Congo, Dem. Rep. \tSUB-SAHARAN AFRICA                 "
+         "Congo, Dem. Rep. ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "46",
-         "Congo, Repub. of the \tSUB-SAHARAN AFRICA                 "
+         "Congo, Repub. of the ",
+         "SUB-SAHARAN AFRICA                 "
         ],
         [
          "47",
-         "Cook Islands \tOCEANIA                            "
+         "Cook Islands ",
+         "OCEANIA                            "
         ],
         [
          "48",
-         "Costa Rica \tLATIN AMER. & CARIB    "
+         "Costa Rica ",
+         "LATIN AMER. & CARIB    "
         ],
         [
          "49",
-         "Cote d'Ivoire \tSUB-SAHARAN AFRICA                 "
+         "Cote d'Ivoire ",
+         "SUB-SAHARAN AFRICA                 "
         ]
        ],
        "shape": {
-        "columns": 1,
+        "columns": 2,
         "rows": 227
        }
       },
@@ -655,77 +710,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country\\tRegion</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Afghanistan \\tASIA (EX. NEAR EAST)</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>ASIA (EX. NEAR EAST)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Albania \\tEASTERN EUROPE</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>EASTERN EUROPE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Algeria \\tNORTHERN AFRICA</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NORTHERN AFRICA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>American Samoa \\tOCEANIA                      ...</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>OCEANIA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Andorra \\tWESTERN EUROPE</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>WESTERN EUROPE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>222</th>\n",
-       "      <td>West Bank \\tNEAR EAST</td>\n",
+       "      <td>West Bank</td>\n",
+       "      <td>NEAR EAST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>223</th>\n",
-       "      <td>Western Sahara \\tNORTHERN AFRICA              ...</td>\n",
+       "      <td>Western Sahara</td>\n",
+       "      <td>NORTHERN AFRICA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>224</th>\n",
-       "      <td>Yemen \\tNEAR EAST</td>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>NEAR EAST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>225</th>\n",
-       "      <td>Zambia \\tSUB-SAHARAN AFRICA</td>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>SUB-SAHARAN AFRICA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>226</th>\n",
-       "      <td>Zimbabwe \\tSUB-SAHARAN AFRICA</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>SUB-SAHARAN AFRICA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>227 rows × 1 columns</p>\n",
+       "<p>227 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       Country\\tRegion\n",
-       "0          Afghanistan \\tASIA (EX. NEAR EAST)         \n",
-       "1        Albania \\tEASTERN EUROPE                     \n",
-       "2        Algeria \\tNORTHERN AFRICA                    \n",
-       "3    American Samoa \\tOCEANIA                      ...\n",
-       "4        Andorra \\tWESTERN EUROPE                     \n",
-       "..                                                 ...\n",
-       "222    West Bank \\tNEAR EAST                          \n",
-       "223  Western Sahara \\tNORTHERN AFRICA              ...\n",
-       "224        Yemen \\tNEAR EAST                          \n",
-       "225       Zambia \\tSUB-SAHARAN AFRICA                 \n",
-       "226     Zimbabwe \\tSUB-SAHARAN AFRICA                 \n",
+       "             Country                               Region\n",
+       "0       Afghanistan         ASIA (EX. NEAR EAST)         \n",
+       "1           Albania   EASTERN EUROPE                     \n",
+       "2           Algeria   NORTHERN AFRICA                    \n",
+       "3    American Samoa   OCEANIA                            \n",
+       "4           Andorra   WESTERN EUROPE                     \n",
+       "..               ...                                  ...\n",
+       "222       West Bank   NEAR EAST                          \n",
+       "223  Western Sahara   NORTHERN AFRICA                    \n",
+       "224           Yemen   NEAR EAST                          \n",
+       "225          Zambia   SUB-SAHARAN AFRICA                 \n",
+       "226        Zimbabwe   SUB-SAHARAN AFRICA                 \n",
        "\n",
-       "[227 rows x 1 columns]"
+       "[227 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +800,8 @@
    "source": [
     "#read_txt to pull txt files\n",
     "##read_cvs will still pull txt files, but may not import correctly\n",
-    "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.txt\")\n",
+    "#to fix the issues using cvs at the end of your file path add sep = '\\t'\n",
+    "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.txt\", sep = '\\t')\n",
     "df \n"
    ]
   },
