using read_table for txt file

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e1a59d4e",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
          "type": "string"
         }
        ],
-       "ref": "abcc7d79-c5e8-4029-ad1b-caa5051091bb",
+       "ref": "d167f2d9-87bd-448d-a20a-34c08c0b26f7",
        "rows": [
         [
          "0",
@@ -792,7 +792,7 @@
        "[227 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,8 +801,13 @@
     "#read_txt to pull txt files\n",
     "##read_cvs will still pull txt files, but may not import correctly\n",
     "#to fix the issues using cvs at the end of your file path add sep = '\\t'\n",
-    "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.txt\", sep = '\\t')\n",
-    "df \n"
+    "\n",
+    "##df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.txt\", sep = '\\t')\n",
+    "##df\n",
+    "\n",
+    "df = pd.read_table(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.txt\")\n",
+    "df\n",
+    "\n"
    ]
   },
   {
