changing the column view on the json file worked tho

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -3408,7 +3408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "cb39ce9c",
    "metadata": {},
    "outputs": [
@@ -3612,7 +3612,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "3b0c2e23-27b8-4df2-b453-33721019b93d",
+       "ref": "d9cf69cb-9744-4ec3-8a31-643e9c222987",
        "rows": [
         [
          "0",
@@ -3690,7 +3690,24 @@
        "      <th>Ferdinand</th>\n",
        "      <th>Fifty Shades Freed</th>\n",
        "      <th>Film Stars Don'T Die In Liverpool</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Forever My Girl</th>\n",
+       "      <th>Golden Exits</th>\n",
+       "      <th>Hostiles</th>\n",
+       "      <th>I, Tonya</th>\n",
+       "      <th>Insidious: The Last Key</th>\n",
+       "      <th>Jumanji: Welcome To The Jungle</th>\n",
+       "      <th>Mary And The Witch'S Flower</th>\n",
+       "      <th>Maze Runner: The Death Cure</th>\n",
+       "      <th>Molly'S Game</th>\n",
+       "      <th>Paddington 2</th>\n",
+       "      <th>Padmaavat</th>\n",
+       "      <th>Permission</th>\n",
+       "      <th>Peter Rabbit</th>\n",
+       "      <th>Phantom Thread</th>\n",
+       "      <th>Pitch Perfect 3</th>\n",
+       "      <th>Proud Mary</th>\n",
+       "      <th>Sanpo Suru Shinryakusha</th>\n",
+       "      <th>Star Wars: The Last Jedi</th>\n",
        "      <th>The 15:17 To Paris</th>\n",
        "      <th>The Commuter</th>\n",
        "      <th>The Disaster Artist</th>\n",
@@ -3716,7 +3733,24 @@
        "      <td>{'popcornscore': 49, 'rating': 'PG', 'tomatosc...</td>\n",
        "      <td>{'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...</td>\n",
        "      <td>{'popcornscore': 69, 'rating': 'R', 'tomatosco...</td>\n",
-       "      <td>...</td>\n",
+       "      <td>{'popcornscore': 91, 'rating': 'PG', 'tomatosc...</td>\n",
+       "      <td>{'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...</td>\n",
+       "      <td>{'Genre': 'Adventure', 'Gross': '$548,886', 'I...</td>\n",
+       "      <td>{'popcornscore': 89, 'rating': 'R', 'tomatosco...</td>\n",
+       "      <td>{'popcornscore': 51, 'rating': 'PG13', 'tomato...</td>\n",
+       "      <td>{'Genre': 'Action', 'Gross': '$760,867', 'IMDB...</td>\n",
+       "      <td>{'popcornscore': 78, 'rating': 'PG', 'tomatosc...</td>\n",
+       "      <td>{'Genre': 'Action', 'Gross': '$720,463', 'IMDB...</td>\n",
+       "      <td>{'popcornscore': 85, 'rating': 'R', 'tomatosco...</td>\n",
+       "      <td>{'Genre': 'Animation', 'Gross': '$184,414', 'I...</td>\n",
+       "      <td>{'popcornscore': 62, 'rating': 'NR', 'tomatosc...</td>\n",
+       "      <td>{'Genre': 'Comedy', 'Gross': 'unknown', 'IMDB ...</td>\n",
+       "      <td>{'Genre': 'Animation', 'Gross': 'unknown', 'IM...</td>\n",
+       "      <td>{'popcornscore': 68, 'rating': 'R', 'tomatosco...</td>\n",
+       "      <td>{'popcornscore': 52, 'rating': 'PG13', 'tomato...</td>\n",
+       "      <td>{'popcornscore': 56, 'rating': 'R', 'tomatosco...</td>\n",
+       "      <td>{'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...</td>\n",
+       "      <td>{'popcornscore': 48, 'rating': 'PG13', 'tomato...</td>\n",
        "      <td>{'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...</td>\n",
        "      <td>{'popcornscore': 48, 'rating': 'PG13', 'tomato...</td>\n",
        "      <td>{'popcornscore': 89, 'rating': 'R', 'tomatosco...</td>\n",
@@ -3730,7 +3764,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 38 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3761,8 +3794,62 @@
        "                                  Fifty Shades Freed  \\\n",
        "0  {'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...   \n",
        "\n",
-       "                   Film Stars Don'T Die In Liverpool  ...  \\\n",
-       "0  {'popcornscore': 69, 'rating': 'R', 'tomatosco...  ...   \n",
+       "                   Film Stars Don'T Die In Liverpool  \\\n",
+       "0  {'popcornscore': 69, 'rating': 'R', 'tomatosco...   \n",
+       "\n",
+       "                                     Forever My Girl  \\\n",
+       "0  {'popcornscore': 91, 'rating': 'PG', 'tomatosc...   \n",
+       "\n",
+       "                                        Golden Exits  \\\n",
+       "0  {'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...   \n",
+       "\n",
+       "                                            Hostiles  \\\n",
+       "0  {'Genre': 'Adventure', 'Gross': '$548,886', 'I...   \n",
+       "\n",
+       "                                            I, Tonya  \\\n",
+       "0  {'popcornscore': 89, 'rating': 'R', 'tomatosco...   \n",
+       "\n",
+       "                             Insidious: The Last Key  \\\n",
+       "0  {'popcornscore': 51, 'rating': 'PG13', 'tomato...   \n",
+       "\n",
+       "                      Jumanji: Welcome To The Jungle  \\\n",
+       "0  {'Genre': 'Action', 'Gross': '$760,867', 'IMDB...   \n",
+       "\n",
+       "                         Mary And The Witch'S Flower  \\\n",
+       "0  {'popcornscore': 78, 'rating': 'PG', 'tomatosc...   \n",
+       "\n",
+       "                         Maze Runner: The Death Cure  \\\n",
+       "0  {'Genre': 'Action', 'Gross': '$720,463', 'IMDB...   \n",
+       "\n",
+       "                                        Molly'S Game  \\\n",
+       "0  {'popcornscore': 85, 'rating': 'R', 'tomatosco...   \n",
+       "\n",
+       "                                        Paddington 2  \\\n",
+       "0  {'Genre': 'Animation', 'Gross': '$184,414', 'I...   \n",
+       "\n",
+       "                                           Padmaavat  \\\n",
+       "0  {'popcornscore': 62, 'rating': 'NR', 'tomatosc...   \n",
+       "\n",
+       "                                          Permission  \\\n",
+       "0  {'Genre': 'Comedy', 'Gross': 'unknown', 'IMDB ...   \n",
+       "\n",
+       "                                        Peter Rabbit  \\\n",
+       "0  {'Genre': 'Animation', 'Gross': 'unknown', 'IM...   \n",
+       "\n",
+       "                                      Phantom Thread  \\\n",
+       "0  {'popcornscore': 68, 'rating': 'R', 'tomatosco...   \n",
+       "\n",
+       "                                     Pitch Perfect 3  \\\n",
+       "0  {'popcornscore': 52, 'rating': 'PG13', 'tomato...   \n",
+       "\n",
+       "                                          Proud Mary  \\\n",
+       "0  {'popcornscore': 56, 'rating': 'R', 'tomatosco...   \n",
+       "\n",
+       "                             Sanpo Suru Shinryakusha  \\\n",
+       "0  {'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...   \n",
+       "\n",
+       "                            Star Wars: The Last Jedi  \\\n",
+       "0  {'popcornscore': 48, 'rating': 'PG13', 'tomato...   \n",
        "\n",
        "                                  The 15:17 To Paris  \\\n",
        "0  {'Genre': 'Drama', 'Gross': 'unknown', 'IMDB M...   \n",
@@ -3792,12 +3879,10 @@
        "0  {'popcornscore': -1, 'rating': 'NR', 'tomatosc...   \n",
        "\n",
        "                                          Winchester  \n",
-       "0  {'Genre': 'Biography', 'Gross': '$696,786', 'I...  \n",
-       "\n",
-       "[1 rows x 38 columns]"
+       "0  {'Genre': 'Biography', 'Gross': '$696,786', 'I...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6136,7 +6221,10 @@
    "id": "d8b1a165",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.set_option('display.max.columns', 40)\n",
+    "#this worked on the json file correctly, just not on the excel document??? weird"
+   ]
   },
   {
    "cell_type": "code",
