working with some simple commands (head,tail, etc)

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -3894,7 +3894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "1fa86aee",
    "metadata": {},
    "outputs": [
@@ -3928,7 +3928,7 @@
          "type": "string"
         }
        ],
-       "ref": "40707c5e-fc8c-48d6-8a4a-a0f1dc9cbd36",
+       "ref": "e40466d0-aca1-4d12-a2c7-5440caba00b6",
        "rows": [
         [
          "0",
@@ -6192,7 +6192,7 @@
        "233    74  ZWE                          Zimbabwe               Harare"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6200,8 +6200,8 @@
    "source": [
     "#had to troubleshoot to figure out why I could not install openpyxl, but eventually got it figured out so this file would load properly\n",
     "#adding additional sheet in document sheet_name = 'Sheet1'\n",
-    "df = pd.read_excel(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\world_population_excel_workbook.xlsx\", sheet_name = 'Sheet1')\n",
-    "df"
+    "df2 = pd.read_excel(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\world_population_excel_workbook.xlsx\", sheet_name = 'Sheet1')\n",
+    "df2"
    ]
   },
   {
@@ -6228,11 +6228,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3f5af7c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 234 entries, 0 to 233\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   Rank     234 non-null    int64 \n",
+      " 1   CCA3     234 non-null    object\n",
+      " 2   Country  234 non-null    object\n",
+      " 3   Capital  234 non-null    object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 7.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2.info()"
+   ]
   },
   {
    "cell_type": "code",
