--- a/Pandas_Data_Analyst's_BF.ipynb
+++ b/Pandas_Data_Analyst's_BF.ipynb
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "3c19ae34",
    "metadata": {},
    "outputs": [
@@ -747,21 +747,63 @@
       "1            2         1       1\n",
       "2            3         1       3\n",
       "3            4         1       1\n",
-      "4            5         0       3\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Pclass'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 19\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(df.iloc[\u001b[32m0\u001b[39m:\u001b[32m5\u001b[39m, \u001b[32m0\u001b[39m:\u001b[32m3\u001b[39m])\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# 3. Use .loc to get all passengers in 1st class who are female\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPclass\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSex\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# 4. Use .iloc to get the age of the 10th passenger (by position)\u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[38;5;28mprint\u001b[39m()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tm96\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexing.py:1183\u001b[39m, in \u001b[36m_LocationIndexer.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   1181\u001b[39m     key = \u001b[38;5;28mtuple\u001b[39m(com.apply_if_callable(x, \u001b[38;5;28mself\u001b[39m.obj) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m key)\n\u001b[32m   1182\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._is_scalar_access(key):\n\u001b[32m-> \u001b[39m\u001b[32m1183\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtakeable\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_takeable\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1184\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_tuple(key)\n\u001b[32m   1185\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1186\u001b[39m     \u001b[38;5;66;03m# we by definition only have the 0th axis\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tm96\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\frame.py:4226\u001b[39m, in \u001b[36mDataFrame._get_value\u001b[39m\u001b[34m(self, index, col, takeable)\u001b[39m\n\u001b[32m   4220\u001b[39m engine = \u001b[38;5;28mself\u001b[39m.index._engine\n\u001b[32m   4222\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m.index, MultiIndex):\n\u001b[32m   4223\u001b[39m     \u001b[38;5;66;03m# CategoricalIndex: Trying to use the engine fastpath may give incorrect\u001b[39;00m\n\u001b[32m   4224\u001b[39m     \u001b[38;5;66;03m#  results if our categories are integers that dont match our codes\u001b[39;00m\n\u001b[32m   4225\u001b[39m     \u001b[38;5;66;03m# IntervalIndex: IntervalTree has no get_loc\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m4226\u001b[39m     row = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4227\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m series._values[row]\n\u001b[32m   4229\u001b[39m \u001b[38;5;66;03m# For MultiIndex going through engine effectively restricts us to\u001b[39;00m\n\u001b[32m   4230\u001b[39m \u001b[38;5;66;03m#  same-length tuples; see test_get_set_value_no_partial_indexing\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\tm96\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\range.py:417\u001b[39m, in \u001b[36mRangeIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m    415\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m    416\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Hashable):\n\u001b[32m--> \u001b[39m\u001b[32m417\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n\u001b[32m    418\u001b[39m \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n\u001b[32m    419\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'Pclass'"
+      "4            5         0       3\n",
+      "     PassengerId  Survived  Pclass  \\\n",
+      "1              2         1       1   \n",
+      "3              4         1       1   \n",
+      "11            12         1       1   \n",
+      "31            32         1       1   \n",
+      "52            53         1       1   \n",
+      "..           ...       ...     ...   \n",
+      "856          857         1       1   \n",
+      "862          863         1       1   \n",
+      "871          872         1       1   \n",
+      "879          880         1       1   \n",
+      "887          888         1       1   \n",
+      "\n",
+      "                                                  Name     Sex   Age  SibSp  \\\n",
+      "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "11                            Bonnell, Miss. Elizabeth  female  58.0      0   \n",
+      "31      Spencer, Mrs. William Augustus (Marie Eugenie)  female   NaN      1   \n",
+      "52            Harper, Mrs. Henry Sleeper (Myna Haxtun)  female  49.0      1   \n",
+      "..                                                 ...     ...   ...    ...   \n",
+      "856         Wick, Mrs. George Dennick (Mary Hitchcock)  female  45.0      1   \n",
+      "862  Swift, Mrs. Frederick Joel (Margaret Welles Ba...  female  48.0      0   \n",
+      "871   Beckwith, Mrs. Richard Leonard (Sallie Monypeny)  female  47.0      1   \n",
+      "879      Potter, Mrs. Thomas Jr (Lily Alexenia Wilson)  female  56.0      0   \n",
+      "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
+      "\n",
+      "     Parch    Ticket      Fare Cabin Embarked  \n",
+      "1        0  PC 17599   71.2833   C85        C  \n",
+      "3        0    113803   53.1000  C123        S  \n",
+      "11       0    113783   26.5500  C103        S  \n",
+      "31       0  PC 17569  146.5208   B78        C  \n",
+      "52       0  PC 17572   76.7292   D33        C  \n",
+      "..     ...       ...       ...   ...      ...  \n",
+      "856      1     36928  164.8667   NaN        S  \n",
+      "862      0     17466   25.9292   D17        S  \n",
+      "871      1     11751   52.5542   D35        S  \n",
+      "879      1     11767   83.1583   C50        C  \n",
+      "887      0    112053   30.0000   B42        S  \n",
+      "\n",
+      "[94 rows x 12 columns]\n",
+      "14.0\n",
+      "     PassengerId  Survived  Pclass                              Name     Sex  \\\n",
+      "100          101         0       3           Petranec, Miss. Matilda  female   \n",
+      "101          102         0       3  Petroff, Mr. Pastcho (\"Pentcho\")    male   \n",
+      "102          103         0       1         White, Mr. Richard Frasar    male   \n",
+      "103          104         0       3        Johansson, Mr. Gustaf Joel    male   \n",
+      "104          105         0       3    Gustafsson, Mr. Anders Vilhelm    male   \n",
+      "105          106         0       3             Mionoff, Mr. Stoytcho    male   \n",
+      "\n",
+      "      Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
+      "100  28.0      0      0   349245   7.8958   NaN        S  \n",
+      "101   NaN      0      0   349215   7.8958   NaN        S  \n",
+      "102  21.0      0      1    35281  77.2875   D26        S  \n",
+      "103  33.0      0      0     7540   8.6542   NaN        S  \n",
+      "104  37.0      2      0  3101276   7.9250   NaN        S  \n",
+      "105  28.0      0      0   349207   7.8958   NaN        S   ['Fare', 'Survived']\n"
      ]
     }
    ],
@@ -784,13 +826,13 @@
     "print(df.iloc[0:5, 0:3])\n",
     "\n",
     "# 3. Use .loc to get all passengers in 1st class who are female\n",
-    "print(df.loc['Pclass', 'Sex'])\n",
+    "print(df.loc[(df['Pclass'] == 1) & (df['Sex'] == 'female')])\n",
     "\n",
     "# 4. Use .iloc to get the age of the 10th passenger (by position)\n",
-    "print()\n",
+    "print(df.iloc[9]['Age'])\n",
     "\n",
     "# 5. Use .loc to get the 'Fare' and 'Survived' values for passengers with index 100 to 105\n",
-    "print()"
+    "print(df.loc[100:105],['Fare', 'Survived'])"
    ]
   }
  ],
