--- a/Week_1/Pandas_Describe.ipynb
+++ b/Week_1/Pandas_Describe.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "419cc82e",
    "metadata": {},
    "outputs": [
@@ -441,32 +441,375 @@
     }
    ],
    "source": [
-    "df.describe()"
+    "df.describe()\n",
+    "#not sure why it included Plant Date in this, when in the video it did not pull it. Maybe something to do with the message Pandas gave above?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c3ce9cba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "TreeID",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "qSpecies",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "PlantDate",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "tree_depth",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "8c55379f-b379-4444-b69f-fbf569f1d228",
+       "rows": [
+        [
+         "count",
+         "193940.0",
+         "193940",
+         "68911",
+         "151614.0"
+        ],
+        [
+         "unique",
+         null,
+         "571",
+         null,
+         null
+        ],
+        [
+         "top",
+         null,
+         "Tree(s) ::",
+         null,
+         null
+        ],
+        [
+         "freq",
+         null,
+         "11734",
+         null,
+         null
+        ],
+        [
+         "mean",
+         "126960.02767350727",
+         null,
+         "2000-12-02 22:19:59.122346112",
+         "9.927664991359636"
+        ],
+        [
+         "min",
+         "1.0",
+         null,
+         "1955-09-19 00:00:00",
+         "0.0"
+        ],
+        [
+         "25%",
+         "52836.75",
+         null,
+         "1995-01-30 00:00:00",
+         "3.0"
+        ],
+        [
+         "50%",
+         "121171.5",
+         null,
+         "2001-07-24 00:00:00",
+         "7.0"
+        ],
+        [
+         "75%",
+         "203348.25",
+         null,
+         "2008-11-21 00:00:00",
+         "12.0"
+        ],
+        [
+         "max",
+         "262465.0",
+         null,
+         "2020-07-30 00:00:00",
+         "9999.0"
+        ],
+        [
+         "std",
+         "79504.82913119717",
+         null,
+         null,
+         "29.31893236264582"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 11
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TreeID</th>\n",
+       "      <th>qSpecies</th>\n",
+       "      <th>PlantDate</th>\n",
+       "      <th>tree_depth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>193940.000000</td>\n",
+       "      <td>193940</td>\n",
+       "      <td>68911</td>\n",
+       "      <td>151614.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>571</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tree(s) ::</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11734</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>126960.027674</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2000-12-02 22:19:59.122346112</td>\n",
+       "      <td>9.927665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1955-09-19 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>52836.750000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1995-01-30 00:00:00</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>121171.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2001-07-24 00:00:00</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>203348.250000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008-11-21 00:00:00</td>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>262465.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-07-30 00:00:00</td>\n",
+       "      <td>9999.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>79504.829131</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.318932</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               TreeID    qSpecies                      PlantDate  \\\n",
+       "count   193940.000000      193940                          68911   \n",
+       "unique            NaN         571                            NaN   \n",
+       "top               NaN  Tree(s) ::                            NaN   \n",
+       "freq              NaN       11734                            NaN   \n",
+       "mean    126960.027674         NaN  2000-12-02 22:19:59.122346112   \n",
+       "min          1.000000         NaN            1955-09-19 00:00:00   \n",
+       "25%      52836.750000         NaN            1995-01-30 00:00:00   \n",
+       "50%     121171.500000         NaN            2001-07-24 00:00:00   \n",
+       "75%     203348.250000         NaN            2008-11-21 00:00:00   \n",
+       "max     262465.000000         NaN            2020-07-30 00:00:00   \n",
+       "std      79504.829131         NaN                            NaN   \n",
+       "\n",
+       "           tree_depth  \n",
+       "count   151614.000000  \n",
+       "unique            NaN  \n",
+       "top               NaN  \n",
+       "freq              NaN  \n",
+       "mean         9.927665  \n",
+       "min          0.000000  \n",
+       "25%          3.000000  \n",
+       "50%          7.000000  \n",
+       "75%         12.000000  \n",
+       "max       9999.000000  \n",
+       "std         29.318932  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include='all')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "20884dd2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "PlantDate",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "d31ad99f-10c6-409d-8b96-48c8ef6c5c2e",
+       "rows": [
+        [
+         "count",
+         "68911"
+        ],
+        [
+         "mean",
+         "2000-12-02 22:19:59.122346112"
+        ],
+        [
+         "min",
+         "1955-09-19 00:00:00"
+        ],
+        [
+         "25%",
+         "1995-01-30 00:00:00"
+        ],
+        [
+         "50%",
+         "2001-07-24 00:00:00"
+        ],
+        [
+         "75%",
+         "2008-11-21 00:00:00"
+        ],
+        [
+         "max",
+         "2020-07-30 00:00:00"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 7
+       }
+      },
+      "text/plain": [
+       "count                            68911\n",
+       "mean     2000-12-02 22:19:59.122346112\n",
+       "min                1955-09-19 00:00:00\n",
+       "25%                1995-01-30 00:00:00\n",
+       "50%                2001-07-24 00:00:00\n",
+       "75%                2008-11-21 00:00:00\n",
+       "max                2020-07-30 00:00:00\n",
+       "Name: PlantDate, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to convert plant date to an inter vs an object\n",
+    "df['PlantDate'].describe()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d6b9804b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "NDFrame.describe() got an unexpected keyword argument 'datetime_is_numeric'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPlantDate\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdescribe\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatetime_is_numeric\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: NDFrame.describe() got an unexpected keyword argument 'datetime_is_numeric'"
+     ]
+    }
+   ],
+   "source": [
+    "df['PlantDate'].describe(datetime_is_numeric=True)\n",
+    "#is this because the video is older and now pandas automatically can determine this?"
+   ]
   }
  ],
  "metadata": {
