summary stats and value count practice

--- a/Pandas_Data_Analyst's_BF.ipynb
+++ b/Pandas_Data_Analyst's_BF.ipynb
@@ -840,45 +840,528 @@
    "execution_count": null,
    "id": "eddd7e6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "PassengerId",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Survived",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Pclass",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "SibSp",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Parch",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Fare",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "6292a42a-b130-4d9a-8571-ad10a2fe76f1",
+       "rows": [
+        [
+         "count",
+         "891.0",
+         "891.0",
+         "891.0",
+         "714.0",
+         "891.0",
+         "891.0",
+         "891.0"
+        ],
+        [
+         "mean",
+         "446.0",
+         "0.3838383838383838",
+         "2.308641975308642",
+         "29.69911764705882",
+         "0.5230078563411896",
+         "0.38159371492704824",
+         "32.204207968574636"
+        ],
+        [
+         "std",
+         "257.3538420152301",
+         "0.4865924542648575",
+         "0.836071240977049",
+         "14.526497332334042",
+         "1.1027434322934317",
+         "0.8060572211299483",
+         "49.6934285971809"
+        ],
+        [
+         "min",
+         "1.0",
+         "0.0",
+         "1.0",
+         "0.42",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "25%",
+         "223.5",
+         "0.0",
+         "2.0",
+         "20.125",
+         "0.0",
+         "0.0",
+         "7.9104"
+        ],
+        [
+         "50%",
+         "446.0",
+         "0.0",
+         "3.0",
+         "28.0",
+         "0.0",
+         "0.0",
+         "14.4542"
+        ],
+        [
+         "75%",
+         "668.5",
+         "1.0",
+         "3.0",
+         "38.0",
+         "1.0",
+         "0.0",
+         "31.0"
+        ],
+        [
+         "max",
+         "891.0",
+         "1.0",
+         "3.0",
+         "80.0",
+         "8.0",
+         "6.0",
+         "512.3292"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>714.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>446.000000</td>\n",
+       "      <td>0.383838</td>\n",
+       "      <td>2.308642</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0.523008</td>\n",
+       "      <td>0.381594</td>\n",
+       "      <td>32.204208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>257.353842</td>\n",
+       "      <td>0.486592</td>\n",
+       "      <td>0.836071</td>\n",
+       "      <td>14.526497</td>\n",
+       "      <td>1.102743</td>\n",
+       "      <td>0.806057</td>\n",
+       "      <td>49.693429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.420000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>223.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>20.125000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.910400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>446.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14.454200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>668.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>512.329200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
+       "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
+       "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
+       "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
+       "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
+       "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
+       "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
+       "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
+       "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
+       "\n",
+       "            Parch        Fare  \n",
+       "count  891.000000  891.000000  \n",
+       "mean     0.381594   32.204208  \n",
+       "std      0.806057   49.693429  \n",
+       "min      0.000000    0.000000  \n",
+       "25%      0.000000    7.910400  \n",
+       "50%      0.000000   14.454200  \n",
+       "75%      0.000000   31.000000  \n",
+       "max      6.000000  512.329200  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()\n",
+    "#gives quick stat summary of the data frame"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d20e4591",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Pclass",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "f2e4c95f-16de-4361-80b2-e3edc221dc05",
+       "rows": [
+        [
+         "3",
+         "491"
+        ],
+        [
+         "1",
+         "216"
+        ],
+        [
+         "2",
+         "184"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "Pclass\n",
+       "3    491\n",
+       "1    216\n",
+       "2    184\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Sex'].value_counts()\n",
+    "df['Pclass'].value_counts()\n",
+    "#value count is for categories"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "46539d15",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Embarked",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "61a59309-3195-4aaf-9062-594e4829b4d1",
+       "rows": [
+        [
+         "Q",
+         "77"
+        ],
+        [
+         "C",
+         "168"
+        ],
+        [
+         "S",
+         "644"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "Embarked\n",
+       "Q     77\n",
+       "C    168\n",
+       "S    644\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Embarked'].value_counts(ascending=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "405ff648",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0917c03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'].mean()       # Average age\n",
+    "df['Age'].median()     # Middle value\n",
+    "df['Age'].min()        # Youngest passenger\n",
+    "df['Age'].max()        # Oldest passenger\n",
+    "df['Age'].nunique()    # Number of unique ages\n",
+    "df['Embarked'].nunique()  # Number of unique embarkation ports"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2cd626af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Titanic dataset\n",
+    "url = 'https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv'\n",
+    "df = pd.read_csv(url)\n",
+    "\n",
+    "# Preview the data\n",
+    "df.head()\n",
+    "\n",
+    "# Now answer the following using .describe(), .value_counts(), and column-level summary functions. \n",
+    "# Put your code INSIDE the print statements!\n",
+    "\n",
+    "# 1. Use .describe() to summarize the numeric columns\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1151c347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Use .value_counts() to see counts for embarkation ports\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7be1e3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Use .value_counts() to count passenger classes\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc8e928c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Show the average (mean) age of passengers\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6778bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Show the maximum fare paid\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f7aae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. Show how many unique names are in the dataset\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c414e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Show counts for values in the 'Sex' column\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "019e3c2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff62d276",
    "metadata": {},
    "outputs": [],
    "source": []
